tests/ui/parser/recover-field-extra-angle-brackets.stderr
error: unmatched angle bracket
  --> $DIR/recover-field-extra-angle-brackets.rs:5:19
   |
LL |     first: Vec<u8>>,
   |                   ^ help: remove extra angle bracket

error: aborting due to previous error

